--- a/package.json
+++ b/package.json
@@ -19,22 +19,29 @@
     "@mui/x-charts": "^7.7.1",
     "@mui/x-date-pickers": "^7.7.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.51.11",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "firebase": "^10.12.4",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.5",
     "jodit-react": "^4.1.2",
     "material-react-table": "^2.13.0",
-    "mui-one-time-password-input": "^2.0.2",
+    "mui-one-time-password-input": "^2.0.3",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "ua-parser-js": "^1.0.38",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ua-parser-js": "^0.7.39",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
